--- a/src/Sections/NavBar.scss
+++ b/src/Sections/NavBar.scss
@@ -1,8 +1,9 @@
 .nav-bar {
+    position: sticky;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 22px 48px 22px 26px;
+    padding: 22px 48px 22px 26px;
     .menu {
         display: flex;
         align-items: center;
