--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   background-color: #000;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400px;
+  color: #fff
 }
 
 
