--- a/src/Sections/SideBar.scss
+++ b/src/Sections/SideBar.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 150px;
+    width: 10.4%;
     .create-button {
         margin-left: 13px;
         margin-bottom: 36px;
