feat: style talent cards, add to talentslist, fix lint errors

--- a/src/Sections/SideBar.scss
+++ b/src/Sections/SideBar.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 10.4%;
+    max-height: 500px;
     .create-button {
         margin-left: 13px;
         margin-bottom: 36px;
