--- a/src/Sections/TalentsList.scss
+++ b/src/Sections/TalentsList.scss
@@ -5,4 +5,10 @@
     width: 40%;
     border: #242526 solid 1px;
     border-radius: 8px;
+    .cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+    }
 }
