--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -2,6 +2,6 @@
 
 .talent-profile {
     width: 40%;
-    border: $main-color solid 1px;
+    border: $primary solid 1px;
     border-radius: 8px;
 }
