--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -3,13 +3,57 @@
 .button {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     color: white;
     border: none;
     outline: none;
     border-radius: 15px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    font-size: 12px;
     line-height: 22px;
+    gap: 9px;
+    &.big{
+        padding: 8px 16px;
+        border-radius: 15px;
+        font-size: 12px;
+    }
+    & .primary {
+        background-color: $primary;
+    }
+    &.secondary {
+        background-color: $secondary
+    }
+    &.sidebar-btn{
+        padding: 10px 16px;
+        border-radius: 8px;
+        font-size: 14px;
+        background-color: transparent;
+        color: #fff;
+        transition: transform 0.3s ease;
+        &:hover {
+            transform: scale(1.1);
+        }
+        &.active {
+            background-color: #fff;
+            color: $primary;
+            &:hover {
+                transform: none
+            }
+        }
+    }
+    &.small {
+        padding: 0 8px;
+        font-size: 8px;
+        color: #fff;
+        border-radius: 20px;
+        gap: 5px;
+        &.red {
+            background-color: $warning-color;
+        }
+        &.green {
+            background-color: $secondary;
+        }
+        &.grey {
+            background-color: rgba(255,255,255, 0.5)
+        }
+    }
 }
