--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,6 @@
 $primary: #9A05EB;
+$primary-darker: #6b1e94;
 $secondary: #3C983A;
-$warning-color: #9F3232;
+$secondary-darker: #387e37;
+$warning: #9F3232;
+$warning-darker: #832929;
