--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -1,7 +1,93 @@
 @import '../variables.scss';
 
 .talent-profile {
+    display: flex;
+    flex-direction: column;
     width: 40%;
     border: $primary solid 1px;
     border-radius: 8px;
+    padding: 6px;
+    .header {
+        display: flex;
+        gap: 15px;
+        width: 100%;
+        padding: 16px 9px;
+        background-color: rgba(255,255,255,0.1);
+        height: 166px;
+    }
+    .profile-image {
+        width: 130px;
+        height: 130px;
+    }
+    .info-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .name {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-size: 23px;
+        font-weight: bold;
+        img {
+            width: 20px;
+            height: 20px;
+        }
+    }
+    .caption {
+        font-size: 14px;
+        color: $primary;
+    }
+    .buttons {
+        display: flex;
+        gap: 20px;
+        .button {
+            padding: 5px 10px;
+            font-size: 10px;
+        }
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        img {
+            width: 10px;
+            height: 10px;
+        }
+        font-size: 12px;
+        .location {
+            font-weight: bold;
+        }
+        .join-info {
+            font-weight: lighter;
+            color: rgba(255,255,255,0.6)
+        }
+    }
+    .prof-info {
+        padding: 16px 24px;
+    }
+    .section {
+        padding: 0 14px;
+    }
+    hr {
+        margin: 15px 0;
+        color: #555;
+        background-color:#555; 
+        border:0px none;
+        height:1px; 
+        clear:both; 
+    }
+    .title {
+        font-size: 20px;
+        margin-bottom: 10px;
+        color: $primary;
+    }
+    .about-text {
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 15px;
+        letter-spacing: 0.2px;
+    }
 }
