--- a/src/Sections/SideBar.scss
+++ b/src/Sections/SideBar.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 10.4%;
     max-height: 500px;
     .create-button {
         margin-left: 13px;
@@ -43,5 +42,11 @@
             width: 20px;
             height: 20px;
         }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .side-bar {
+        display: none;
     }
 }
