--- a/src/Sections/TalentsList.scss
+++ b/src/Sections/TalentsList.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 21px 32px;
-    width: 40%;
+    width: 58%;
     border: #242526 solid 1px;
     border-radius: 8px;
     .cards {
@@ -10,5 +10,16 @@
         flex-direction: column;
         justify-content: space-between;
         gap: 20px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .talents-list {   
+        width: 100%; 
+    }
+}
+@media screen and (max-width: 800px) {
+    .talents-list {
+        padding: 0;
     }
 }
