--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,16 @@
 .home {
     display: flex;
     justify-content: space-between;
-    position: relative;
-    width: 100%;
+    gap: 5px;
+    .content {
+        position: relative;
+        display: flex;
+    }
 }
+
+@media screen and (max-width: 1200px) {
+    .content {
+        width: 100%;
+    }
+}
+
