--- a/src/Sections/SideBar.scss
+++ b/src/Sections/SideBar.scss
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-height: 500px;
-    .create-button {
+    margin-right: 20px;
+    background-color: #000;
+    .create-btn {
         margin-left: 13px;
         margin-bottom: 36px;
         width: 98px;
@@ -16,37 +17,19 @@
             margin-bottom: 30px;
         }
     }
-    .about {
-        position: relative;
-        flex-direction: column;
-        font-size: 8px;
-        line-height: 28px;
-        width: 100%;
-
-    }
-    .links {
-        display: flex;
-        justify-content: flex-start;
-        gap: 10px;
-        a {
-            text-decoration: none;
-            color: #fff;
-        }
-    }
-    .downloads {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center ;
-        gap: 10px;
-        img {
-            width: 20px;
-            height: 20px;
-        }
-    }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
     .side-bar {
-        display: none;
+        position: fixed;
+        top: 50px;
+        padding: 20px 10px;
+        height: 105vh;
+        left: 0;
+        z-index: 100;
+        .documents-holder {
+            position: absolute;
+            bottom: 100px;
+        }
     }
 }
