fix: buttons dimensions

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -3,6 +3,9 @@
 .button {
     display: flex;
     align-items: center;
+    min-width: max-content;
+    white-space: no-wrap;
+    gap: 9px;
     color: white;
     border: none;
     outline: none;
@@ -10,7 +13,6 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     line-height: 22px;
-    gap: 9px;
     transition: all 0.3s ease;
     &.big{
         padding: 8px 16px;
