fix: burger-menu button

--- a/src/Sections/NavBar.scss
+++ b/src/Sections/NavBar.scss
@@ -6,7 +6,8 @@
     background: #000;
     .burger-menu {
         display: none;
-        font-size: 24px;
+        width: 25px;
+        height: 25px;        
     }
     .menu {
         display: flex;
