fix: add search-bar, fix fidex header of TalentProfile, and search-bar in TalentsList, add portfolio section to talentProfile

--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -1,6 +1,7 @@
 @import '../variables.scss';
 
 .talent-profile {
+    position: relative;
     display: flex;
     flex-direction: column;
     background-color: #000;
@@ -8,13 +9,18 @@
     border-radius: 8px;
     padding: 6px;
     width: 56%;
+    .marked {
+        position: absolute;
+        bottom: 6px;
+        right: 6px;
+    }
     .back-arrow {
         display: none;
         text-align: right;
         transform:rotateY(180deg); 
         margin: 10px;
     }
-    .header {
+    .header {position: relative;
         display: flex;
         gap: 15px;
         width: 100%;
@@ -73,7 +79,13 @@
         }
     }
     .prof-info {
+        max-height: 60vh;
+        overflow-y: scroll;
+        overflow-x: visible;
         padding: 16px 24px;
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     .section {
         padding: 0 14px;
@@ -96,6 +108,29 @@
         font-size: 10px;
         line-height: 15px;
         letter-spacing: 0.2px;
+    }
+    .skill-buttons {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .portfolio {
+        position: relative;
+        .slides {
+            position: absolute;
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin-top: 20px;
+            max-width: 100%;
+            overflow-x: scroll;
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            .slide {
+                width: 100px;
+            }
+        }
     }
 }
 
