--- a/src/Sections/SideBar.scss
+++ b/src/Sections/SideBar.scss
@@ -2,9 +2,9 @@
 .side-bar {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     margin-right: 20px;
     background-color: #000;
+    transition: all 0.3s ease;
     .create-btn {
         margin-left: 13px;
         margin-bottom: 36px;
@@ -25,11 +25,6 @@
         top: 50px;
         padding: 20px 10px;
         height: 105vh;
-        left: 0;
         z-index: 100;
-        .documents-holder {
-            position: absolute;
-            bottom: 100px;
-        }
     }
 }
