--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
   background-color: #000;
   font-family: 'Poppins', sans-serif;
   font-weight: 400px;
-  color: #fff
+  color: #fff;
 }
-
 
