--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -9,6 +9,7 @@
     border-radius: 8px;
     padding: 6px;
     width: 56%;
+    max-height: 80vh;
     .marked {
         position: absolute;
         bottom: 6px;
@@ -79,7 +80,7 @@
         }
     }
     .prof-info {
-        max-height: 60vh;
+        max-height: 65vh;
         overflow-y: scroll;
         overflow-x: visible;
         padding: 16px 24px;
@@ -129,6 +130,7 @@
             }
             .slide {
                 width: 100px;
+                margin-bottom: 30px;
             }
         }
     }
@@ -138,7 +140,10 @@
     .talent-profile {
         width: 100%;
         .back-arrow {
+            position: absolute;
             display: block;
+            right: 6px;
+            z-index: 110;
         }
         .name {
             font-size: 16px;
@@ -157,9 +162,6 @@
         .location-wrapper {
             position: relative;
             width: 100%;
-        }
-        .marked {
-            display: none;
         }
     }
 
