--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 90;
+    backdrop-filter: blur(2px);
 }
 
 @media screen and (max-width: 800px) {
