fix: off a blur effect for screens bigger than 600px

--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -20,6 +20,7 @@
         text-align: right;
         transform:rotateY(180deg); 
         margin: 10px;
+        font-size: 20px;
     }
     .header {position: relative;
         display: flex;
