--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -10,6 +10,7 @@
     border: none;
     outline: none;
     border-radius: 15px;
+    text-align: center;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     line-height: 22px;
