fix: header, fix select button in TalentProfile, change height of card element in TalentsList

--- a/src/components/TalentCard.scss
+++ b/src/components/TalentCard.scss
@@ -51,7 +51,7 @@
         display: flex;
         gap: 15px;
     }
-    .marked {
+    .selected {
         position: absolute;
         top: 16px;
         right: 16px;
