--- a/src/Sections/TalentProfile.scss
+++ b/src/Sections/TalentProfile.scss
@@ -10,11 +10,6 @@
     padding: 6px;
     width: 56%;
     max-height: 80vh;
-    .marked {
-        position: absolute;
-        bottom: 6px;
-        right: 6px;
-    }
     .back-arrow {
         position: absolute;
         text-align: right;
@@ -71,11 +66,12 @@
     }
     .location-wrapper {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         gap: 5px;
         img {
-            width: 10px;
-            height: 10px;
+            width: 20px;
+            height: 20px;
         }
         font-size: 12px;
         .location {
@@ -84,6 +80,10 @@
         .join-info {
             font-weight: lighter;
             color: rgba(255,255,255,0.6)
+        }
+        .marked {
+            bottom: 6px;
+            right: 6px;
         }
     }
     .prof-info {
@@ -166,6 +166,9 @@
         .location-wrapper {
             position: relative;
             width: 100%;
+        }
+        .buttons {
+            display: none;
         }
     }
 
